# axum-sandbox

./: Cargo.toml
examples/async-graphql/: main.rs
examples/async-graphql-2/: main.rs
examples/async-graphql/starwars/: mod.rs  model.rs
examples/hello_world/: main.rs  result
examples/json/: main.rs  result
examples/pathparam/: main.rs  result
