[package]
name = "axum-sandbox"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.10.0"
axum = "0.2.5"
serde = {version = "1.0.130", features = ["derive"]}
slab = "0.4.4"
tokio = {version = "1.11.0", features = ["full"]}
